--- a/family-tree/src/app/module/contact/contact.component.html
+++ b/family-tree/src/app/module/contact/contact.component.html
@@ -1,3 +1,33 @@
-<div>
-  contact
+<div class="box-contact-image px-[72px] mx-auto">
+  <img src="assets/images/contact/contact_banner.png" class="mx-auto w-full" width="1400px" height="373px" alt="">
+  <div class="background-contact w-[1100px] h-[789px] mx-auto mt-[80px]">
+    <div class="title-contact pt-[51px]">
+      <p class="font-[Ambrosia] text-center font-normal text-[#FFFFFF] text-5xl">GỬI GÓP Ý</p>
+    </div>
+    <div class="form-control flex flex-rows pt-[61px]">
+      <form novalidate>
+        <div class="input-placeholder-name">
+          <input type="text" required>
+          <div class="placeholder-name">
+            Họ và tên <span>*</span>
+          </div>
+        </div>
+
+        <div class="input-placeholder-phone pt-[16px]">
+          <input type="text" required>
+          <div class="placeholder-phone">
+            SĐT <span>*</span>
+          </div>
+        </div>
+
+        <div class="input-placeholder-content pt-[16px]">
+          <textarea id="w3review" name="w3review" rows="4" cols="50" placeholder="Tin nhắn"></textarea>
+        </div>
+
+        <div class="button-contact flex justify-end">
+          <button class="button font-semibold text-2xl font-[Averta12] text-[#9E2B25]">GỬI</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
