--- a/family-tree/src/app/module/news/news.component.html
+++ b/family-tree/src/app/module/news/news.component.html
@@ -10,12 +10,11 @@
           <div class="pl-[10px]">
             <mat-icon>keyboard_arrow_right</mat-icon>
           </div>
-          <p class="text-[#9E2B25]">{{currentTab}}</p>
+          <p class="text-[#9E2B25]">
+            {{currentTab}}
+          </p>
         </div>
       </li>
-<!--      <a [routerLink]="['/historyFamily']" class="text-sm text-[#9D9D9D] font-[400] hover:text-sm">-->
-<!--        Lịch sử họ Kiều-->
-<!--      </a>-->
     </ul>
   </div>
   <div class="flex flex-row">
