update contact and contact image

--- a/family-tree/src/app/module/contact/contact.component.html
+++ b/family-tree/src/app/module/contact/contact.component.html
@@ -4,30 +4,53 @@
     <div class="title-contact pt-[51px]">
       <p class="font-[Ambrosia] text-center font-normal text-[#FFFFFF] text-5xl">GỬI GÓP Ý</p>
     </div>
-    <div class="form-control flex flex-rows pt-[61px]">
-      <form novalidate>
-        <div class="input-placeholder-name">
-          <input type="text" required>
-          <div class="placeholder-name">
-            Họ và tên <span>*</span>
+    <div class="form-control flex flex-rows pt-[61px] mx-[24px]">
+      <div class="basis-1/2">
+        <form novalidate>
+          <div class="input-placeholder-name">
+            <input type="text" required>
+            <div class="placeholder-name">
+              Họ và tên <span>*</span>
+            </div>
           </div>
-        </div>
 
-        <div class="input-placeholder-phone pt-[16px]">
-          <input type="text" required>
-          <div class="placeholder-phone">
-            SĐT <span>*</span>
+          <div class="input-placeholder-phone pt-[16px]">
+            <input type="text" required>
+            <div class="placeholder-phone">
+              SĐT <span>*</span>
+            </div>
           </div>
+
+          <div class="input-placeholder-content pt-[16px]">
+            <textarea id="w3review" name="w3review" rows="4" cols="50" placeholder="Tin nhắn"></textarea>
+          </div>
+
+          <div class="button-contact flex justify-end">
+            <button class="button font-semibold text-2xl font-[Averta12] text-[#9E2B25]">GỬI</button>
+          </div>
+        </form>
+      </div>
+      <div class="info-contact basis-1/2 ml-[33px] justify-items-start">
+        <p class="font-[Ambrosia] font-normal text-[#FFFFFF] text-5xl pb-[15px]">Thông tin liên hệ</p>
+
+        <div class="flex flex-row">
+          <div class="my-auto">
+            <mat-icon>phone_in_talk</mat-icon>
+          </div>
+          <p class="font-normal text-[#FFFFFF] font-[Ambrosia] text-2xl text-center">Điện thoại: 0903424984</p>
         </div>
 
-        <div class="input-placeholder-content pt-[16px]">
-          <textarea id="w3review" name="w3review" rows="4" cols="50" placeholder="Tin nhắn"></textarea>
+        <div class="flex flex-row">
+          <div class="my-auto ">
+            <mat-icon>language</mat-icon>
+          </div>
+          <p class="font-normal text-[#FFFFFF] font-[Ambrosia] text-2xl text-center">Email: giaphahongo@gmail.com</p>
         </div>
 
-        <div class="button-contact flex justify-end">
-          <button class="button font-semibold text-2xl font-[Averta12] text-[#9E2B25]">GỬI</button>
+        <div class="w-full">
+          <img src="assets/images/contact/border_contact2.png" class="pt-[15px] w-full " alt="">
         </div>
-      </form>
+      </div>
     </div>
   </div>
 </div>
