--- a/family-tree/src/app/module/contact/contact.component.scss
+++ b/family-tree/src/app/module/contact/contact.component.scss
@@ -17,7 +17,9 @@
       position: relative;
     }
     .input-placeholder-name input {
-      padding: 13px;
+      padding-left: 20px;
+      padding-top: 13px;
+      padding-bottom: 13px;
       font-size: 16px;
       width: 100%;
       font-family: Averta12, serif !important;
@@ -32,7 +34,7 @@
       bottom: 0;
       height: 15px;
       font-size: 16px;
-      left: 37px;
+      left: 20px;
       margin: auto;
       color: #333333;
       font-family: Averta12, serif !important;
@@ -47,7 +49,9 @@
       position: relative;
     }
     .input-placeholder-phone input {
-      padding: 13px;
+      padding-left: 20px;
+      padding-top: 13px;
+      padding-bottom: 13px;
       font-size: 16px;
       width: 100%;
       font-family: Averta12, serif !important;
@@ -62,7 +66,7 @@
       bottom: 0;
       height: 0;
       font-size: 16px;
-      left: 37px;
+      left: 20px;
       margin: auto;
       color: #333333;
       font-family: Averta12, serif !important;
