--- a/family-tree/src/app/module/category-news/category-news.component.html
+++ b/family-tree/src/app/module/category-news/category-news.component.html
@@ -30,7 +30,7 @@
         </p>
       </div>
     </div>
-    <div class="new-post w-[280px] mx-auto mt-[32px] pt-[24px]">
+    <div class="new-post w-[280px] h-auto mx-[25px] mt-[32px] pt-[24px]">
       <p class="text-[#444444] font-semibold text-base font-[Averta14] text-[#444444] pl-[14px]">
         BÀI VIẾT MỚI NHẤT
       </p>
@@ -44,9 +44,9 @@
       </div>
     </div>
   </div>
-  <div class="box-news-background basis-3/4 mx-auto pt-[38px]">
-    <div class="article-list w-[858px] mx-auto py-[25px]">
-      <a *ngFor="let post of displayedPostsMain" [routerLink]="['/news-detail', post.id]" class="bg-white mx-[15px] mb-[24px] flex">
+  <div class="box-news-background basis-3/4 mx-auto mt-[38px]">
+    <div class="article-list w-full mr-[25px] py-[25px]">
+      <a *ngFor="let post of displayedPostsMain" [routerLink]="['/news-detail', post.id]" class="bg-white mx-[30px] mb-[24px] flex">
         <img [src]="post.image" width="234px" height="167px" alt="Post Image" class="row-span-4">
         <div>
           <p class="col-span-2 px-[16px] pt-[16px] font-medium text-2xl leading-7">{{ post.title }}</p>
@@ -54,7 +54,7 @@
           <p class="px-[16px] font-normal text-sm">{{ post.content }}</p>
         </div>
       </a>
-      <div class="tabs flex justify-end mr-[15px]">
+      <div class="tabs flex justify-end mr-[28px]">
         <button class="pagination-btn px-[15px] py-2 text-sm text-[#000000] font-semibold rounded bg-white mr-[16px]" (click)="prevTab()" [ngClass]="{'pagination-btn-active': currentPage === 1}" [disabled]="currentPage === 1">
           <
         </button>
