--- a/family-tree/src/app/module/news/news.component.html
+++ b/family-tree/src/app/module/news/news.component.html
@@ -1,5 +1,5 @@
 <div class="box-image px-[72px] mx-auto">
-  <img src="assets/images/news/banner_news.png" width="1400px" height="373px" alt="">
+  <img src="assets/images/news/banner_news.png" width="100%" height="373px" alt="">
 
   <div class="pt-[48px] px-[22px]">
     <ul class="flex">
